--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,21 +13,7 @@
 
   <link rel="shortcut icon" href={{"/assets/static/img/favicon.ico" | relative_url }} >
 
-  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.js"></script>
-
-    <!-- START: Syntax highlighting -->
-  <link rel="stylesheet"
-        type="text/css"
-        href={{"/assets/static/libs/prettify/r298/css/prettify.css" | relative_url }}>
-  <script type="text/javascript"
-          src={{"/assets/static/libs/prettify/r298/js/prettify.js" | relative_url }} >
-  </script>
-  <script type="text/javascript">
-  $(document).ready(function(){
-    prettyPrint();
-  });
-  </script>
-  <!-- END: Syntax highlighting -->
+  <!-- Syntax highlighting: see https://help.github.com/articles/using-syntax-highlighting-on-github-pages/ -->
 
   </head>
 
@@ -54,6 +40,9 @@
       <ul id="top-menu">
         <li>
           <a href="http://ds.iris.edu/ds/nodes/dmc/" title="IRIS DMC">DMC</a>
+        </li>
+        <li>
+          <a href="http://www.iris.edu/hq" title="IRIS HQ">Home</a>
         </li>
         <li>
           <a href="http://www.iris.edu/hq" title="IRIS HQ">Home</a>
