"View to Documentation Home Page"
Add a "View to Documentation Home Page" button in the header.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,13 @@
   <header>
   <div id="header">
     <div id="header-left">
+     <ul id="top-menu">
+       {% if site.github.is_project_page %}
+       <li>
+         <a href="{{ site.github.url }}" title="HomeDoc">View Documentation Home Page</a>
+       </li>
+        {% endif %}
+      </ul>
       <div id="logo">
         <a href="http://ds.iris.edu/hq/" title="IRIS">
             <img alt="IRIS" src={{"/assets/static/img/layout/logos/iris_logo_shadow.png"| relative_url }} >
