--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,22 @@
   </head>
 
   <body>
+   <style>
+      table{
+       border-collapse: collapse;
+       border-spacing: 0;
+       border:2px solid #ff0000;
+          }
+     th{
+       border:2px solid #000000;
+       }
 
-    <div class="container">
+     td{
+       border:1px solid #000000;
+       }
+   </style>
+    
+      <div class="container">
       <div class="container-inner">
 
 
