--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,15 +22,15 @@
       table{
        border-collapse: collapse;
        border-spacing: 0;
-       border:2px solid #ff0000;
+       border:1px solid #DDDDDD;
           }
      th{
-       border:2px solid #000000;
+       background-color:#f9f9f9;
        }
-
      td{
-       border:1px solid #000000;
+       border:1px solid #DDDDDD;
        }
+      tr:nth-child(even) {background-color: #343434;}
    </style>
     
       <div class="container">
