--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,12 +25,12 @@
        border:1px solid #DDDDDD;
           }
      th{
-       background-color:#f9f9f9;
+       background-color:#c3c3c3;
        }
      td{
        border:1px solid #DDDDDD;
        }
-      tr:nth-child(even) {background-color: #343434;}
+      tr:nth-child(even) {background-color: #f9f9f9;}
    </style>
     
       <div class="container">
