Restore the header link to the project
It looks like I accidentally removed this in an earlier change.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,6 +56,9 @@
        <li>
          <a href="{{ site.github.url }}" title="HomeDoc">View Documentation Home Page</a>
        </li>
+        <li>
+          <a href="{{ site.github.repository_url }}" title="GitHub">View on GitHub</a>
+        </li>
         {% endif %}
       </ul>
       <div id="nsf-logo">
